--- a/ShiroProcessReporter/ShiroProcessReporter/ShiroProcessReporter.csproj
+++ b/ShiroProcessReporter/ShiroProcessReporter/ShiroProcessReporter.csproj
@@ -12,11 +12,19 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include="Resources\TrayIcon\*.*" />
+    <Content Include="Resources\Images\*.*" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Components\TrayIconView.xaml" />
     <None Remove="Layouts\Navigation.xaml" />
     <None Remove="NativeMethods.txt" />
+    <None Remove="Resources\Images\Bug.svg" />
+    <None Remove="Resources\Images\cloud-server-black.svg" />
+    <None Remove="Resources\Images\cloud-server-white.svg" />
+    <None Remove="Resources\Images\filter-black.svg" />
+    <None Remove="Resources\Images\filter-white.svg" />
+    <None Remove="Resources\Images\replace-black.svg" />
+    <None Remove="Resources\Images\replace-white.svg" />
   </ItemGroup>
   <ItemGroup>
     <AdditionalFiles Include="NativeMethods.txt" />
@@ -26,6 +34,7 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageReference Include="CommunityToolkit.WinUI.UI.Controls" Version="7.1.2" />
     <PackageReference Include="H.NotifyIcon.WinUI" Version="2.0.131" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
     <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.49-beta">
