feat: add EndpointSettings and ReplaceRuleSettings

--- a/ShiroProcessReporter/ShiroProcessReporter/ShiroProcessReporter.csproj
+++ b/ShiroProcessReporter/ShiroProcessReporter/ShiroProcessReporter.csproj
@@ -15,6 +15,8 @@
     <Content Include="Resources\Images\*.*" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Components\OneLineInputDialog.xaml" />
+    <None Remove="Components\ReplaceRuleEditDialog.xaml" />
     <None Remove="Components\TrayIconView.xaml" />
     <None Remove="Layouts\Navigation.xaml" />
     <None Remove="NativeMethods.txt" />
@@ -25,6 +27,8 @@
     <None Remove="Resources\Images\filter-white.svg" />
     <None Remove="Resources\Images\replace-black.svg" />
     <None Remove="Resources\Images\replace-white.svg" />
+    <None Remove="Views\FilterRuleSettings.xaml" />
+    <None Remove="Views\LogViewer.xaml" />
   </ItemGroup>
   <ItemGroup>
     <AdditionalFiles Include="NativeMethods.txt" />
@@ -32,7 +36,9 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-    <PackageReference Include="CommunityToolkit.WinUI.UI.Controls" Version="7.1.2" />
+    <PackageReference Include="CommunityToolkit.WinUI" Version="7.1.2" />
+    <PackageReference Include="CommunityToolkit.WinUI.Controls.SettingsControls" Version="8.0.240109" />
+    <PackageReference Include="CommunityToolkit.WinUI.Converters" Version="8.0.240109" />
     <PackageReference Include="H.NotifyIcon.WinUI" Version="2.0.131" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
@@ -44,6 +50,30 @@
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.5.240428000" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.3233" />
     <Manifest Include="$(ApplicationManifest)" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="Components\ReplaceRuleEditDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="Components\OneLineInputDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="Views\LogViewer.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="Views\FilterRuleSettings.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 
   <ItemGroup>
