--- a/ShiroProcessReporter/ShiroProcessReporter/ShiroProcessReporter.csproj
+++ b/ShiroProcessReporter/ShiroProcessReporter/ShiroProcessReporter.csproj
@@ -49,6 +49,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.5.240428000" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.3233" />
+    <PackageReference Include="WinUIEx" Version="2.3.4" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
 
